feat(cache): implement cache factory task override and custom caching solutions
- Added support for overriding the default cache factory task with custom implementations.
- Introduced a `cacheFactoryTask` that allows users to define their own caching strategies.
- Updated documentation to reflect changes in cache resource initialization and usage.
- Enhanced tests to cover scenarios for custom cache implementations, including Redis-like behavior.
- Implemented `setOutput` functionality in task runners to allow afterRun event listeners to modify task outputs.
- Added comprehensive tests for `setOutput` functionality, ensuring type safety and middleware compatibility.

--- a/.intructions.md
+++ b/.intructions.md
@@ -375,3 +375,8 @@ src/
 - Look for test scripts in package.json
 - Use `npm run dev` or similar for development mode
 - Run tests with `npm test` or similar
+
+## Advice
+
+- Always run tests after implementing a feature
+- If the new feature can be made an example. Ask the user for confirmation whether to add an example.
